# poc-flux-components

./: .gitignore  README.md  pyproject.toml
.github/workflows/: validate-registry.yml
docs/: CONTRIBUTING.md  rfc.md
registry/: README.md  finetuning.toml
schemas/: component.schema.json
