[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poc-flux-components"
version = "0.1.0"
description = "Proof-of-concept for flux-pipelines component registry and ownership model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
